<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>staubli_val3_driver</name>
  <version>0.1.0</version>
  <description>
   <p>
     ROS-Industrial VAL3 driver for interfacing with Staubli CS8 robot controllers.
   </p>
   <p>
     This package is part of the ROS-Industrial program and contains a VAL3
     application and libraries that implement an industrial_robot_client
     compatible server program.
   </p>
   <p>
     See the readme and wiki for more information.
   </p>
  </description>
  <author email="murilo.martins@ocado.com">Murilo Martins</author>
  <author email="engin.karlidag@gmx.de">Engin Karlidag (Institute for Factory Automation and Production Systems (FAPS))</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/staubli_val3_driver</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli_val3_driver/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli_val3_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>control_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>industrial_robot_client</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>simple_message</depend>
  <depend>staubli_msgs</depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
